fix hairline gap in chrome

--- a/_sass/components/header.sass
+++ b/_sass/components/header.sass
@@ -19,6 +19,7 @@
         height: (200em / 16)
         margin-bottom: 17px
         border: 9px solid #fff
+        background-color: #fff
         border-radius: 5%
         transition: all .2s
         box-shadow: unset
